# speedy-softmax

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  bench_torch.py
.github/workflows/: checks.yml  tests.yml
benches/: bench_softmax.rs  benchmarks.rs  softmax.rs
scripts/: bench_torch.py
src/: candle.rs  fused_softmax.rs  lib.rs  main.rs
