[package]
name = "speedy-softmax"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.2.0", features = ["accelerate"] }
candle-nn = { version = "0.2.0" }
clap = { version = "4.4.2", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"

[features]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
mkl = ["candle-core/mkl", "candle-nn/mkl"]

[lib]
# allows bench args, https://bheisler.github.io/criterion.rs/book/faq.html
bench = false

[[bench]]
name = "benchmarks"
harness = false
