[package]
name = "speedy-softmax"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.2.0" }
candle-nn = { version = "0.2.0" }
fast-math = { version = "0.1.1", optional = true }
rayon = "1.7.0"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[features]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
mkl = ["candle-core/mkl", "candle-nn/mkl"]
fast-math = ["dep:fast-math"]

[lib]
# allows bench args, https://bheisler.github.io/criterion.rs/book/faq.html
bench = false

[[bench]]
name = "benchmarks"
harness = false
